# stellapp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  nixpacks.toml  package-lock.json  package.json  test_db.ts  test_tx.ts  tsconfig.json
.agents/skills/escrow-tutorial/: SKILL.md
.agents/skills/smart-contract-security/: SKILL.md
.agents/skills/stellar-core/: SKILL.md
.agents/skills/stellar-zk/: SKILL.md
circuits/: pot12_0001.ptau  privacy_pool.circom  privacy_pool.r1cs  privacy_pool.zkey  privacy_pool_final.zkey  verification_key.json
circuits/privacy_pool_js/: privacy_pool.wasm
compiler_template/: Cargo.toml
compiler_template/src/: lib.rs
contracts/privacy_pool/: Cargo.toml
contracts/privacy_pool/contracts/pool/: Cargo.toml
dashboard/: next.config.mjs  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/home/: page.module.css  page.tsx
prisma/: schema.prisma
public/: PixelBlast.js  animations.js  index.html  roadmap.html  styles.css  user_guide.md
scripts/: format_vk.js  generate_vk_rust.js  hardcode_vk.js  zk_setup.sh
src/: index.ts
src/agent/: agent.ts  prompt.ts  templates.ts  tools.ts
src/bot/: controller.ts  whatsapp.ts
src/contracts/escrow/: Cargo.toml
src/contracts/escrow/src/: lib.rs
src/contracts/privacy_pool/: Cargo.toml
src/contracts/privacy_pool/src/: lib.rs
src/services/: auth.ts  cctp.ts  compiler.ts  confidential_token.ts  config.ts  db.ts  encryption.ts  evm.ts  stellar.ts  zk_pool.ts
src/zk/proving/: artifacts.ts
(+2 files in other folders)
